--- a/web/src/pages/home/styles.css
+++ b/web/src/pages/home/styles.css
@@ -24,6 +24,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+
+    flex-direction: column;
 }
 
 .header p {
@@ -47,6 +49,11 @@
     width:95%;
     height: 50px;
     margin: 5px auto;
+}
+
+.header .btnSair {
+    margin-right: 10px;
+    align-self: flex-end;
 }
 
 .content {
